--- a/index.html
+++ b/index.html
@@ -4,25 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <style>
+    <!-- <style>
         p{
             color: green;
             font-size: 40px;
         }
-    </style>
+    </style> -->
     <title>Aprendendo CSS</title>
 </head>
 <body>
-    <!-- 1 Inline css -->
+    <!-- 01 Inline css -->
     <h1 style="color: red;">Mudar a cor com inline css</h1>
     <h1 style="background-color: bisque;">Outra cor</h1>
     <hr>
 
-    <!-- 2 Multiplas regras css -->
+    <!-- 02 Multiplas regras css -->
     <h1 style="color: purple; font-size: 50px; border: 3px solid rgb(120, 88, 88);">Mudar cor e tamanho da fonte</h1>
 
-    <!-- 3 Internal css -->
+    <!-- 03 Internal css -->
     <p>Fui estilizado pelo internal css</p>
     <p>Fui estilizado pelo internal css</p>
+
+    <!-- 04 External css -->
+    <p>Fui estilizado pelo external css</p>
 </body>
 </html>
