05 Ordem do css

--- a/index.html
+++ b/index.html
@@ -27,5 +27,18 @@
 
     <!-- 04 External css -->
     <p>Fui estilizado pelo external css</p>
+
+    <!-- 05 Ordem do css -->
+    <hr>
+
+    <p style="color: red;">Ordem do Css</p>
+    <p>Ordem css</p>
+
+    <ul>
+        <li>Banana</li>
+        <li>Maçã</li>
+        <li>Abacate</li>
+    </ul>
+
 </body>
 </html>
