--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/list.css">
+    <link rel="stylesheet" href="css/titles.css">
     <!-- <style>
         p{
             color: green;
@@ -40,6 +41,24 @@
         <li>Maçã</li>
         <li>Abacate</li>
     </ul>
+
+    <!-- 07 DESAFIO -->
+    <!-- 
+        - Criar um arquivo chamado "titles.css" 
+        - Criar um arquivo chamado "titles.css"
+        - Link o arquivo title.css em seu index.html
+        - Em html crie um h4 com o título "Sou um desafio"
+        - Em title.css estilize h4 com cor de fundo magenta, cor do texto branca e tamanho da fonte de 40px; 
+    -->
+
+    <h4>Sou um desafio</h4>
+
+    <!-- 08 Classes -->
+
+    <p class="paragraph">Algum texto 01</p>
+    <p class="paragraph">Algum texto 02</p>
+    <p class="paragraph">Algum texto 03</p>
+
 
 </body>
 </html>
