--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
     <p class="paragraph">Algum texto 02</p>
     <p class="paragraph">Algum texto 03</p>
 
+    <!-- 09 ID -->
+
+    <h1 id="exclusive-title">Esse título é exclusivo com id</h1>
 
 </body>
 </html>
