--- a/index.html
+++ b/index.html
@@ -63,5 +63,11 @@
 
     <h1 id="exclusive-title">Esse título é exclusivo com id</h1>
 
+    <!-- 10 Multíplas regras -->
+
+    <h2 id="algum-titulo" class="titulo">Algum texto 1</h2>
+    <h2 class="titulo">Algum texto 2</h2>
+    <h2>Algum texto 3</h2>
+
 </body>
 </html>
